feat: add endpoint to retrieve user information by ID
